// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`health i18n golden (GH #6 Phase-2 contract) > darwin: full prose + emitted i18n keys/params 1`] = `
[
  {
    "agentId": "claude-code",
    "category": "configuration",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Remove shell or move the full command into command when shell selection matters.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.claudeHookShellIgnored",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookShellIgnored",
      "suggestion": "healthChecks.text.suggestions.claudeHookShellIgnored",
      "title": "healthChecks.text.titles.claudeHookShellIgnored",
    },
    "message": "A command hook defines args and shell; Claude Code ignores shell in this shape.",
    "params": undefined,
    "severity": "info",
    "suggestion": "Remove shell or move the full command into command when shell selection matters.",
    "title": "Claude hook shell is ignored when args are set",
  },
  {
    "agentId": "claude-code",
    "category": "configuration",
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Add the official Claude Code settings schema near the top of the JSON file.",
      "label": "Add Claude settings schema",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.addClaudeSettingsSchema",
      "fixLabel": "healthChecks.text.fixLabels.addClaudeSettingsSchema",
      "message": "healthChecks.text.messages.claudeSettingsSchemaMissing",
      "suggestion": "healthChecks.text.suggestions.addClaudeSettingsSchema",
      "title": "healthChecks.text.titles.claudeSettingsSchemaMissing",
    },
    "message": "settings.json does not declare the Claude Code settings JSON schema.",
    "params": {
      "name": "settings.json",
    },
    "severity": "info",
    "suggestion": "Add $schema if you want editor validation for Claude Code settings.",
    "title": "Claude settings schema is not declared",
  },
  {
    "agentId": "codex",
    "category": "configuration",
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Remove async when this hook should run today.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.codexAsyncHookSkipped",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.codexAsyncHookSkipped",
      "suggestion": "healthChecks.text.suggestions.codexAsyncHookSkipped",
      "title": "healthChecks.text.titles.codexAsyncHookSkipped",
    },
    "message": "Codex parses async hook handlers, but async command hooks are not supported yet.",
    "params": undefined,
    "severity": "info",
    "suggestion": "Remove async when this hook should run today.",
    "title": "Codex async hook is skipped",
  },
  {
    "agentId": "codex",
    "category": "configuration",
    "evidence": [
      "Codex config reference",
    ],
    "fix": {
      "description": "Add the official Codex TOML schema comment near the top of config.toml.",
      "label": "Add Codex config schema",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.addCodexConfigSchema",
      "fixLabel": "healthChecks.text.fixLabels.addCodexConfigSchema",
      "message": "healthChecks.text.messages.codexConfigSchemaMissing",
      "suggestion": "healthChecks.text.suggestions.codexConfigSchemaMissing",
      "title": "healthChecks.text.titles.codexConfigSchemaMissing",
    },
    "message": "config.toml does not include the official Codex TOML schema comment.",
    "params": undefined,
    "severity": "info",
    "suggestion": "Add the Codex schema comment if you want editor validation for config.toml.",
    "title": "Codex config schema comment is not declared",
  },
  {
    "agentId": "codex",
    "category": "configuration",
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Use type = "command" when this hook should run today.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.codexHookSkippedType",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.codexHookSkippedType",
      "suggestion": "healthChecks.text.suggestions.codexHookSkippedType",
      "title": "healthChecks.text.titles.codexHookSkippedType",
    },
    "message": "Codex currently parses prompt hooks but only command hooks run.",
    "params": {
      "type": "prompt",
    },
    "severity": "info",
    "suggestion": "Use type = "command" when this hook should run today.",
    "title": "Codex hook type is parsed but skipped",
  },
  {
    "agentId": "claude-code",
    "category": "configuration",
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Prefer narrower command allow rules.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.claudeBroadBashPermission",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeBroadBashPermission",
      "suggestion": "healthChecks.text.suggestions.claudeBroadBashPermission",
      "title": "healthChecks.text.titles.claudeBroadBashPermission",
    },
    "message": "permissions.allow contains Bash(*).",
    "params": undefined,
    "severity": "warning",
    "suggestion": "Prefer narrower command allow rules.",
    "title": "Broad Bash permission rule",
  },
  {
    "agentId": "claude-code",
    "category": "configuration",
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Use this only for trusted local workflows.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.claudeBypassPermissions",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeBypassPermissions",
      "suggestion": "healthChecks.text.suggestions.claudeBypassPermissions",
      "title": "healthChecks.text.titles.claudeBypassPermissions",
    },
    "message": "permissionMode is set to bypassPermissions.",
    "params": undefined,
    "severity": "warning",
    "suggestion": "Use this only for trusted local workflows.",
    "title": "Claude Code bypass permissions enabled",
  },
  {
    "agentId": "codex",
    "category": "configuration",
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Keep both only if you expect Codex to merge and warn about this layer.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.codexHooksDuplicated",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.codexHooksDuplicated",
      "suggestion": "healthChecks.text.suggestions.codexHooksDuplicated",
      "title": "healthChecks.text.titles.codexHooksDuplicated",
    },
    "message": "Codex has hooks in config.toml and hooks.json at the same scope.",
    "params": undefined,
    "severity": "warning",
    "suggestion": "Keep both only if you expect Codex to merge and warn about this layer.",
    "title": "Codex hooks defined twice",
  },
  {
    "agentId": "claude-code",
    "category": "reference",
    "evidence": [
      "Claude Code memory",
    ],
    "fix": {
      "description": "Add a Claude memory import for the shared project instructions.",
      "label": "Import AGENTS.md",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.importAgentsMd",
      "fixLabel": "healthChecks.text.fixLabels.importAgentsMd",
      "message": "healthChecks.text.messages.claudeProjectAgentsNotImported",
      "suggestion": "healthChecks.text.suggestions.claudeProjectAgentsNotImported",
      "title": "healthChecks.text.titles.claudeProjectAgentsNotImported",
    },
    "message": "This project has AGENTS.md, but Claude Code reads CLAUDE.md and only imports files referenced from it.",
    "params": undefined,
    "severity": "info",
    "suggestion": "Add @AGENTS.md to project CLAUDE.md if those shared instructions should apply to Claude Code.",
    "title": "Project CLAUDE.md does not import AGENTS.md",
  },
  {
    "agentId": "claude-code",
    "category": "reference",
    "evidence": [
      "Claude Code memory",
    ],
    "fix": {
      "description": "Create the imported file or remove the @path reference.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.instructionImportMissing",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.instructionImportMissing",
      "suggestion": "healthChecks.text.suggestions.instructionImportMissing",
      "title": "healthChecks.text.titles.instructionImportMissing",
    },
    "message": "missing-agents.md referenced by AGENTS.md does not exist.",
    "params": {
      "file": "AGENTS.md",
      "importPath": "missing-agents.md",
    },
    "severity": "warning",
    "suggestion": "Create the imported file or remove the @path reference.",
    "title": "Instruction import is missing",
  },
  {
    "agentId": "codex",
    "category": "reference",
    "evidence": [
      "Codex AGENTS.md",
    ],
    "fix": {
      "description": "Create the imported file or remove the @path reference.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.instructionImportMissing",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.instructionImportMissing",
      "suggestion": "healthChecks.text.suggestions.instructionImportMissing",
      "title": "healthChecks.text.titles.instructionImportMissing",
    },
    "message": "missing-codex.md referenced by AGENTS.md does not exist.",
    "params": {
      "file": "AGENTS.md",
      "importPath": "missing-codex.md",
    },
    "severity": "warning",
    "suggestion": "Create the imported file or remove the @path reference.",
    "title": "Instruction import is missing",
  },
  {
    "agentId": "claude-code",
    "category": "session",
    "evidence": [
      "Claude Code sessions",
    ],
    "fix": {
      "description": "This is usually harmless. Remove stale directories if they are no longer useful.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.claudeEmptyProjectDirs",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeEmptyProjectDirs",
      "suggestion": "healthChecks.text.suggestions.claudeEmptyProjectDirs",
      "title": "healthChecks.text.titles.claudeEmptyProjectDirs",
    },
    "message": "1 empty project directories found in ~/.claude/projects/.",
    "params": {
      "count": 1,
    },
    "severity": "info",
    "suggestion": "This is usually harmless. Remove stale directories if they are no longer useful.",
    "title": "Empty Claude project directories",
  },
  {
    "agentId": "claude-code",
    "category": "session",
    "evidence": [
      "Claude Code sessions",
    ],
    "fix": {
      "description": "This can happen with partial or legacy transcripts.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.sessionMetadataIncomplete",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.sessionMetadataIncomplete",
      "suggestion": "healthChecks.text.suggestions.sessionMetadataIncomplete",
      "title": "healthChecks.text.titles.sessionMetadataIncomplete",
    },
    "message": "orphan-session.jsonl is missing start time or project path metadata.",
    "params": {
      "name": "orphan-session.jsonl",
    },
    "severity": "info",
    "suggestion": "This can happen with partial or legacy transcripts.",
    "title": "Session metadata is incomplete",
  },
  {
    "agentId": "codex",
    "category": "session",
    "evidence": [
      "Codex Windows and WSL homes",
    ],
    "fix": {
      "description": "Run Codex once, then refresh Berth.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.codexNoSessionTranscripts",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.codexNoSessionTranscripts",
      "suggestion": "healthChecks.text.suggestions.codexNoSessionTranscripts",
      "title": "healthChecks.text.titles.codexNoSessionTranscripts",
    },
    "message": "Codex sessions directory exists but contains no rollout transcripts.",
    "params": undefined,
    "severity": "info",
    "suggestion": "Run Codex once, then refresh Berth.",
    "title": "No Codex session transcripts found",
  },
  {
    "agentId": "claude-code",
    "category": "source",
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Create ~/.claude/CLAUDE.md if you want shared Claude Code instructions.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.createUserClaudeMd",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.noUserClaudeMd",
      "suggestion": "healthChecks.text.fixDescriptions.createUserClaudeMd",
      "title": "healthChecks.text.titles.userClaudeMdNotFound",
    },
    "message": "No user-level CLAUDE.md found.",
    "params": undefined,
    "severity": "info",
    "suggestion": "Create ~/.claude/CLAUDE.md if you want shared Claude Code instructions.",
    "title": "User CLAUDE.md not found",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add both server and tool values, or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.addMcpToolFields",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookMcpToolIncomplete",
      "suggestion": "healthChecks.text.suggestions.addMcpToolFields",
      "title": "healthChecks.text.titles.claudeHookMcpToolIncomplete",
    },
    "message": "PreToolUse contains an mcp_tool hook without tool.",
    "params": {
      "event": "PreToolUse",
      "field": "tool",
    },
    "severity": "error",
    "suggestion": "Add both server and tool values, or remove the hook entry.",
    "title": "Claude MCP tool hook is incomplete",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a command value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.addHookCommand",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookMissingCommand",
      "suggestion": "healthChecks.text.fixDescriptions.addHookCommand",
      "title": "healthChecks.text.titles.claudeHookMissingCommand",
    },
    "message": "PreToolUse contains a command hook without a command.",
    "params": {
      "event": "PreToolUse",
    },
    "severity": "error",
    "suggestion": "Add a command value or remove the hook entry.",
    "title": "Claude Code hook is missing command",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a prompt value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.addHookPrompt",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookMissingPrompt",
      "suggestion": "healthChecks.text.suggestions.addHookPrompt",
      "title": "healthChecks.text.titles.claudeHookMissingPrompt",
    },
    "message": "PreToolUse contains a agent hook without a prompt.",
    "params": {
      "event": "PreToolUse",
      "type": "agent",
    },
    "severity": "error",
    "suggestion": "Add a prompt value or remove the hook entry.",
    "title": "Claude prompt hook is missing prompt",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a prompt value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.addHookPrompt",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookMissingPrompt",
      "suggestion": "healthChecks.text.suggestions.addHookPrompt",
      "title": "healthChecks.text.titles.claudeHookMissingPrompt",
    },
    "message": "PreToolUse contains a prompt hook without a prompt.",
    "params": {
      "event": "PreToolUse",
      "type": "prompt",
    },
    "severity": "error",
    "suggestion": "Add a prompt value or remove the hook entry.",
    "title": "Claude prompt hook is missing prompt",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a url value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.addHookUrl",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookMissingUrl",
      "suggestion": "healthChecks.text.suggestions.addHookUrl",
      "title": "healthChecks.text.titles.claudeHookMissingUrl",
    },
    "message": "PreToolUse contains an http hook without a url.",
    "params": {
      "event": "PreToolUse",
    },
    "severity": "error",
    "suggestion": "Add a url value or remove the hook entry.",
    "title": "Claude HTTP hook is missing url",
  },
  {
    "agentId": "codex",
    "category": "structure",
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Add a command value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.addHookCommand",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.codexHookMissingCommand",
      "suggestion": "healthChecks.text.fixDescriptions.addHookCommand",
      "title": "healthChecks.text.titles.codexHookMissingCommand",
    },
    "message": "Notification contains a command hook without a command.",
    "params": {
      "event": "Notification",
    },
    "severity": "error",
    "suggestion": "Add a command value or remove the hook entry.",
    "title": "Codex hook is missing command",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Use a documented hook type, such as command, http, mcp_tool, prompt, or agent.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.useDocumentedHookType",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookUnknownType",
      "suggestion": "healthChecks.text.suggestions.useDocumentedHookType",
      "title": "healthChecks.text.titles.claudeHookUnknownType",
    },
    "message": "PreToolUse uses hook type "frobnicate".",
    "params": {
      "event": "PreToolUse",
      "type": "frobnicate",
    },
    "severity": "warning",
    "suggestion": "Use a documented hook type, such as command, http, mcp_tool, prompt, or agent.",
    "title": "Claude hook type is not documented",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code subagents",
    ],
    "fix": {
      "description": "Claude Code subagents require Markdown files with name and description frontmatter.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.claudeSubagentIncomplete",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeSubagentIncomplete",
      "suggestion": "healthChecks.text.suggestions.claudeSubagentIncomplete",
      "title": "healthChecks.text.titles.claudeSubagentIncomplete",
    },
    "message": "broken is missing name or description frontmatter.",
    "params": {
      "name": "broken",
    },
    "severity": "warning",
    "suggestion": "Claude Code subagents require Markdown files with name and description frontmatter.",
    "title": "Claude subagent metadata is incomplete",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code MCP",
    ],
    "fix": {
      "description": "Add the transport field required by the agent configuration.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.mcpServerNoTransport",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.mcpServerNoTransport",
      "suggestion": "healthChecks.text.suggestions.mcpServerNoTransport",
      "title": "healthChecks.text.titles.mcpServerNoTransport",
    },
    "message": "empty has no command, url, type, or transport field.",
    "params": {
      "name": "empty",
    },
    "severity": "warning",
    "suggestion": "Add the transport field required by the agent configuration.",
    "title": "MCP server has no transport",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code MCP",
    ],
    "fix": {
      "description": "Add the transport field required by the agent configuration.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.mcpServerNoTransport",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.mcpServerNoTransport",
      "suggestion": "healthChecks.text.suggestions.mcpServerNoTransport",
      "title": "healthChecks.text.titles.mcpServerNoTransport",
    },
    "message": "noTransport has no command, url, type, or transport field.",
    "params": {
      "name": "noTransport",
    },
    "severity": "warning",
    "suggestion": "Add the transport field required by the agent configuration.",
    "title": "MCP server has no transport",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code skills",
    ],
    "fix": {
      "description": "Add SKILL.md or move non-skill files outside the skills directory.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.addSkillEntryPoint",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.skillMissingEntryPoint",
      "suggestion": "healthChecks.text.fixDescriptions.addSkillEntryPoint",
      "title": "healthChecks.text.titles.skillMissingEntryPoint",
    },
    "message": "broken-skill has no SKILL.md entrypoint.",
    "params": {
      "name": "broken-skill",
    },
    "severity": "warning",
    "suggestion": "Add SKILL.md or move non-skill files outside the skills directory.",
    "title": "Skill is missing SKILL.md",
  },
  {
    "agentId": "codex",
    "category": "structure",
    "evidence": [
      "Codex custom agents",
    ],
    "fix": {
      "description": "Codex custom agents require name, description, and developer_instructions.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.codexAgentIncomplete",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.codexAgentIncomplete",
      "suggestion": "healthChecks.text.suggestions.codexAgentIncomplete",
      "title": "healthChecks.text.titles.codexAgentIncomplete",
    },
    "message": "broken is missing name, description, or developer_instructions.",
    "params": {
      "name": "broken",
    },
    "severity": "warning",
    "suggestion": "Codex custom agents require name, description, and developer_instructions.",
    "title": "Codex custom agent metadata is incomplete",
  },
  {
    "agentId": "codex",
    "category": "structure",
    "evidence": [
      "Codex skills",
    ],
    "fix": {
      "description": "Add SKILL.md or move non-skill files outside the skills directory.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.addSkillEntryPoint",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.skillMissingEntryPoint",
      "suggestion": "healthChecks.text.fixDescriptions.addSkillEntryPoint",
      "title": "healthChecks.text.titles.skillMissingEntryPoint",
    },
    "message": "codex-broken-skill has no SKILL.md entrypoint.",
    "params": {
      "name": "codex-broken-skill",
    },
    "severity": "warning",
    "suggestion": "Add SKILL.md or move non-skill files outside the skills directory.",
    "title": "Skill is missing SKILL.md",
  },
  {
    "agentId": "claude-code",
    "category": "syntax",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Fix the JSON syntax in .claude/settings.json.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.fixClaudeProjectSettings",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": undefined,
      "suggestion": "healthChecks.text.suggestions.fixClaudeProjectSettings",
      "title": "healthChecks.text.titles.invalidClaudeProjectSettings",
    },
    "message": "<unkeyed>",
    "params": undefined,
    "severity": "error",
    "suggestion": "Fix the JSON syntax in .claude/settings.json.",
    "title": "Invalid project settings.json",
  },
  {
    "agentId": "claude-code",
    "category": "syntax",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Fix the file syntax, then refresh Berth.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.scannerParserError",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "suggestion": "healthChecks.text.suggestions.scannerParserError",
      "title": "healthChecks.text.titles.scannerParserError",
    },
    "message": "<unkeyed>",
    "params": undefined,
    "severity": "error",
    "suggestion": "Fix the file syntax, then refresh Berth.",
    "title": "Scanner parser error",
  },
  {
    "agentId": "codex",
    "category": "syntax",
    "evidence": [
      "Codex config reference",
    ],
    "fix": {
      "description": "Fix the TOML syntax in Codex config.toml.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.fixCodexToml",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": undefined,
      "suggestion": "healthChecks.text.fixDescriptions.fixCodexToml",
      "title": "healthChecks.text.titles.invalidCodexConfig",
    },
    "message": "<unkeyed>",
    "params": undefined,
    "severity": "error",
    "suggestion": "Fix the TOML syntax in Codex config.toml.",
    "title": "Invalid Codex config.toml",
  },
  {
    "agentId": "codex",
    "category": "syntax",
    "evidence": [
      "Codex custom agents",
    ],
    "fix": {
      "description": "Fix the file syntax, then refresh Berth.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.scannerParserError",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "suggestion": "healthChecks.text.suggestions.scannerParserError",
      "title": "healthChecks.text.titles.scannerParserError",
    },
    "message": "<unkeyed>",
    "params": undefined,
    "severity": "error",
    "suggestion": "Fix the file syntax, then refresh Berth.",
    "title": "Scanner parser error",
  },
]
`;

exports[`health i18n golden (GH #6 Phase-2 contract) > win32: full prose + emitted i18n keys/params 1`] = `
[
  {
    "agentId": "claude-code",
    "category": "configuration",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Remove shell or move the full command into command when shell selection matters.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.claudeHookShellIgnored",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookShellIgnored",
      "suggestion": "healthChecks.text.suggestions.claudeHookShellIgnored",
      "title": "healthChecks.text.titles.claudeHookShellIgnored",
    },
    "message": "A command hook defines args and shell; Claude Code ignores shell in this shape.",
    "params": undefined,
    "severity": "info",
    "suggestion": "Remove shell or move the full command into command when shell selection matters.",
    "title": "Claude hook shell is ignored when args are set",
  },
  {
    "agentId": "claude-code",
    "category": "configuration",
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Add the official Claude Code settings schema near the top of the JSON file.",
      "label": "Add Claude settings schema",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.addClaudeSettingsSchema",
      "fixLabel": "healthChecks.text.fixLabels.addClaudeSettingsSchema",
      "message": "healthChecks.text.messages.claudeSettingsSchemaMissing",
      "suggestion": "healthChecks.text.suggestions.addClaudeSettingsSchema",
      "title": "healthChecks.text.titles.claudeSettingsSchemaMissing",
    },
    "message": "settings.json does not declare the Claude Code settings JSON schema.",
    "params": {
      "name": "settings.json",
    },
    "severity": "info",
    "suggestion": "Add $schema if you want editor validation for Claude Code settings.",
    "title": "Claude settings schema is not declared",
  },
  {
    "agentId": "codex",
    "category": "configuration",
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Remove async when this hook should run today.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.codexAsyncHookSkipped",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.codexAsyncHookSkipped",
      "suggestion": "healthChecks.text.suggestions.codexAsyncHookSkipped",
      "title": "healthChecks.text.titles.codexAsyncHookSkipped",
    },
    "message": "Codex parses async hook handlers, but async command hooks are not supported yet.",
    "params": undefined,
    "severity": "info",
    "suggestion": "Remove async when this hook should run today.",
    "title": "Codex async hook is skipped",
  },
  {
    "agentId": "codex",
    "category": "configuration",
    "evidence": [
      "Codex config reference",
    ],
    "fix": {
      "description": "Add the official Codex TOML schema comment near the top of config.toml.",
      "label": "Add Codex config schema",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.addCodexConfigSchema",
      "fixLabel": "healthChecks.text.fixLabels.addCodexConfigSchema",
      "message": "healthChecks.text.messages.codexConfigSchemaMissing",
      "suggestion": "healthChecks.text.suggestions.codexConfigSchemaMissing",
      "title": "healthChecks.text.titles.codexConfigSchemaMissing",
    },
    "message": "config.toml does not include the official Codex TOML schema comment.",
    "params": undefined,
    "severity": "info",
    "suggestion": "Add the Codex schema comment if you want editor validation for config.toml.",
    "title": "Codex config schema comment is not declared",
  },
  {
    "agentId": "codex",
    "category": "configuration",
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Use type = "command" when this hook should run today.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.codexHookSkippedType",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.codexHookSkippedType",
      "suggestion": "healthChecks.text.suggestions.codexHookSkippedType",
      "title": "healthChecks.text.titles.codexHookSkippedType",
    },
    "message": "Codex currently parses prompt hooks but only command hooks run.",
    "params": {
      "type": "prompt",
    },
    "severity": "info",
    "suggestion": "Use type = "command" when this hook should run today.",
    "title": "Codex hook type is parsed but skipped",
  },
  {
    "agentId": "claude-code",
    "category": "configuration",
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Prefer narrower command allow rules.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.claudeBroadBashPermission",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeBroadBashPermission",
      "suggestion": "healthChecks.text.suggestions.claudeBroadBashPermission",
      "title": "healthChecks.text.titles.claudeBroadBashPermission",
    },
    "message": "permissions.allow contains Bash(*).",
    "params": undefined,
    "severity": "warning",
    "suggestion": "Prefer narrower command allow rules.",
    "title": "Broad Bash permission rule",
  },
  {
    "agentId": "claude-code",
    "category": "configuration",
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Use this only for trusted local workflows.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.claudeBypassPermissions",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeBypassPermissions",
      "suggestion": "healthChecks.text.suggestions.claudeBypassPermissions",
      "title": "healthChecks.text.titles.claudeBypassPermissions",
    },
    "message": "permissionMode is set to bypassPermissions.",
    "params": undefined,
    "severity": "warning",
    "suggestion": "Use this only for trusted local workflows.",
    "title": "Claude Code bypass permissions enabled",
  },
  {
    "agentId": "claude-code",
    "category": "configuration",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Set "shell": "powershell" when the hook command is written for PowerShell.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.claudeHookNoWindowsShell",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookNoWindowsShell",
      "suggestion": "healthChecks.text.suggestions.claudeHookNoWindowsShell",
      "title": "healthChecks.text.titles.claudeHookNoWindowsShell",
    },
    "message": "A command hook is configured without shell: powershell on Windows.",
    "params": undefined,
    "severity": "warning",
    "suggestion": "Set "shell": "powershell" when the hook command is written for PowerShell.",
    "title": "Claude hook has no Windows shell hint",
  },
  {
    "agentId": "codex",
    "category": "configuration",
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Add commandWindows or command_windows when the command differs on Windows.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.addCodexWindowsCommand",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.codexHookNoWindowsCommand",
      "suggestion": "healthChecks.text.fixDescriptions.addCodexWindowsCommand",
      "title": "healthChecks.text.titles.codexHookNoWindowsCommand",
    },
    "message": "A command hook is configured without commandWindows on Windows.",
    "params": undefined,
    "severity": "warning",
    "suggestion": "Add commandWindows or command_windows when the command differs on Windows.",
    "title": "Codex hook has no Windows command override",
  },
  {
    "agentId": "codex",
    "category": "configuration",
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Keep both only if you expect Codex to merge and warn about this layer.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.codexHooksDuplicated",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.codexHooksDuplicated",
      "suggestion": "healthChecks.text.suggestions.codexHooksDuplicated",
      "title": "healthChecks.text.titles.codexHooksDuplicated",
    },
    "message": "Codex has hooks in config.toml and hooks.json at the same scope.",
    "params": undefined,
    "severity": "warning",
    "suggestion": "Keep both only if you expect Codex to merge and warn about this layer.",
    "title": "Codex hooks defined twice",
  },
  {
    "agentId": "claude-code",
    "category": "reference",
    "evidence": [
      "Claude Code memory",
    ],
    "fix": {
      "description": "Add a Claude memory import for the shared project instructions.",
      "label": "Import AGENTS.md",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.importAgentsMd",
      "fixLabel": "healthChecks.text.fixLabels.importAgentsMd",
      "message": "healthChecks.text.messages.claudeProjectAgentsNotImported",
      "suggestion": "healthChecks.text.suggestions.claudeProjectAgentsNotImported",
      "title": "healthChecks.text.titles.claudeProjectAgentsNotImported",
    },
    "message": "This project has AGENTS.md, but Claude Code reads CLAUDE.md and only imports files referenced from it.",
    "params": undefined,
    "severity": "info",
    "suggestion": "Add @AGENTS.md to project CLAUDE.md if those shared instructions should apply to Claude Code.",
    "title": "Project CLAUDE.md does not import AGENTS.md",
  },
  {
    "agentId": "claude-code",
    "category": "reference",
    "evidence": [
      "Claude Code memory",
    ],
    "fix": {
      "description": "Create the imported file or remove the @path reference.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.instructionImportMissing",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.instructionImportMissing",
      "suggestion": "healthChecks.text.suggestions.instructionImportMissing",
      "title": "healthChecks.text.titles.instructionImportMissing",
    },
    "message": "missing-agents.md referenced by AGENTS.md does not exist.",
    "params": {
      "file": "AGENTS.md",
      "importPath": "missing-agents.md",
    },
    "severity": "warning",
    "suggestion": "Create the imported file or remove the @path reference.",
    "title": "Instruction import is missing",
  },
  {
    "agentId": "codex",
    "category": "reference",
    "evidence": [
      "Codex AGENTS.md",
    ],
    "fix": {
      "description": "Create the imported file or remove the @path reference.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.instructionImportMissing",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.instructionImportMissing",
      "suggestion": "healthChecks.text.suggestions.instructionImportMissing",
      "title": "healthChecks.text.titles.instructionImportMissing",
    },
    "message": "missing-codex.md referenced by AGENTS.md does not exist.",
    "params": {
      "file": "AGENTS.md",
      "importPath": "missing-codex.md",
    },
    "severity": "warning",
    "suggestion": "Create the imported file or remove the @path reference.",
    "title": "Instruction import is missing",
  },
  {
    "agentId": "claude-code",
    "category": "session",
    "evidence": [
      "Claude Code sessions",
    ],
    "fix": {
      "description": "This is usually harmless. Remove stale directories if they are no longer useful.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.claudeEmptyProjectDirs",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeEmptyProjectDirs",
      "suggestion": "healthChecks.text.suggestions.claudeEmptyProjectDirs",
      "title": "healthChecks.text.titles.claudeEmptyProjectDirs",
    },
    "message": "1 empty project directories found in ~/.claude/projects/.",
    "params": {
      "count": 1,
    },
    "severity": "info",
    "suggestion": "This is usually harmless. Remove stale directories if they are no longer useful.",
    "title": "Empty Claude project directories",
  },
  {
    "agentId": "codex",
    "category": "session",
    "evidence": [
      "Codex Windows and WSL homes",
    ],
    "fix": {
      "description": "Run Codex once, then refresh Berth.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.codexNoSessionTranscripts",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.codexNoSessionTranscripts",
      "suggestion": "healthChecks.text.suggestions.codexNoSessionTranscripts",
      "title": "healthChecks.text.titles.codexNoSessionTranscripts",
    },
    "message": "Codex sessions directory exists but contains no rollout transcripts.",
    "params": undefined,
    "severity": "info",
    "suggestion": "Run Codex once, then refresh Berth.",
    "title": "No Codex session transcripts found",
  },
  {
    "agentId": "claude-code",
    "category": "source",
    "evidence": [
      "Claude Code settings",
    ],
    "fix": {
      "description": "Create ~/.claude/CLAUDE.md if you want shared Claude Code instructions.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.createUserClaudeMd",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.noUserClaudeMd",
      "suggestion": "healthChecks.text.fixDescriptions.createUserClaudeMd",
      "title": "healthChecks.text.titles.userClaudeMdNotFound",
    },
    "message": "No user-level CLAUDE.md found.",
    "params": undefined,
    "severity": "info",
    "suggestion": "Create ~/.claude/CLAUDE.md if you want shared Claude Code instructions.",
    "title": "User CLAUDE.md not found",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add both server and tool values, or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.addMcpToolFields",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookMcpToolIncomplete",
      "suggestion": "healthChecks.text.suggestions.addMcpToolFields",
      "title": "healthChecks.text.titles.claudeHookMcpToolIncomplete",
    },
    "message": "PreToolUse contains an mcp_tool hook without tool.",
    "params": {
      "event": "PreToolUse",
      "field": "tool",
    },
    "severity": "error",
    "suggestion": "Add both server and tool values, or remove the hook entry.",
    "title": "Claude MCP tool hook is incomplete",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a command value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.addHookCommand",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookMissingCommand",
      "suggestion": "healthChecks.text.fixDescriptions.addHookCommand",
      "title": "healthChecks.text.titles.claudeHookMissingCommand",
    },
    "message": "PreToolUse contains a command hook without a command.",
    "params": {
      "event": "PreToolUse",
    },
    "severity": "error",
    "suggestion": "Add a command value or remove the hook entry.",
    "title": "Claude Code hook is missing command",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a prompt value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.addHookPrompt",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookMissingPrompt",
      "suggestion": "healthChecks.text.suggestions.addHookPrompt",
      "title": "healthChecks.text.titles.claudeHookMissingPrompt",
    },
    "message": "PreToolUse contains a agent hook without a prompt.",
    "params": {
      "event": "PreToolUse",
      "type": "agent",
    },
    "severity": "error",
    "suggestion": "Add a prompt value or remove the hook entry.",
    "title": "Claude prompt hook is missing prompt",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a prompt value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.addHookPrompt",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookMissingPrompt",
      "suggestion": "healthChecks.text.suggestions.addHookPrompt",
      "title": "healthChecks.text.titles.claudeHookMissingPrompt",
    },
    "message": "PreToolUse contains a prompt hook without a prompt.",
    "params": {
      "event": "PreToolUse",
      "type": "prompt",
    },
    "severity": "error",
    "suggestion": "Add a prompt value or remove the hook entry.",
    "title": "Claude prompt hook is missing prompt",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Add a url value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.addHookUrl",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookMissingUrl",
      "suggestion": "healthChecks.text.suggestions.addHookUrl",
      "title": "healthChecks.text.titles.claudeHookMissingUrl",
    },
    "message": "PreToolUse contains an http hook without a url.",
    "params": {
      "event": "PreToolUse",
    },
    "severity": "error",
    "suggestion": "Add a url value or remove the hook entry.",
    "title": "Claude HTTP hook is missing url",
  },
  {
    "agentId": "codex",
    "category": "structure",
    "evidence": [
      "Codex hooks",
    ],
    "fix": {
      "description": "Add a command value or remove the hook entry.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.addHookCommand",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.codexHookMissingCommand",
      "suggestion": "healthChecks.text.fixDescriptions.addHookCommand",
      "title": "healthChecks.text.titles.codexHookMissingCommand",
    },
    "message": "Notification contains a command hook without a command.",
    "params": {
      "event": "Notification",
    },
    "severity": "error",
    "suggestion": "Add a command value or remove the hook entry.",
    "title": "Codex hook is missing command",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Use a documented hook type, such as command, http, mcp_tool, prompt, or agent.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.useDocumentedHookType",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeHookUnknownType",
      "suggestion": "healthChecks.text.suggestions.useDocumentedHookType",
      "title": "healthChecks.text.titles.claudeHookUnknownType",
    },
    "message": "PreToolUse uses hook type "frobnicate".",
    "params": {
      "event": "PreToolUse",
      "type": "frobnicate",
    },
    "severity": "warning",
    "suggestion": "Use a documented hook type, such as command, http, mcp_tool, prompt, or agent.",
    "title": "Claude hook type is not documented",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code subagents",
    ],
    "fix": {
      "description": "Claude Code subagents require Markdown files with name and description frontmatter.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.claudeSubagentIncomplete",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.claudeSubagentIncomplete",
      "suggestion": "healthChecks.text.suggestions.claudeSubagentIncomplete",
      "title": "healthChecks.text.titles.claudeSubagentIncomplete",
    },
    "message": "broken is missing name or description frontmatter.",
    "params": {
      "name": "broken",
    },
    "severity": "warning",
    "suggestion": "Claude Code subagents require Markdown files with name and description frontmatter.",
    "title": "Claude subagent metadata is incomplete",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code MCP",
    ],
    "fix": {
      "description": "Add the transport field required by the agent configuration.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.mcpServerNoTransport",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.mcpServerNoTransport",
      "suggestion": "healthChecks.text.suggestions.mcpServerNoTransport",
      "title": "healthChecks.text.titles.mcpServerNoTransport",
    },
    "message": "empty has no command, url, type, or transport field.",
    "params": {
      "name": "empty",
    },
    "severity": "warning",
    "suggestion": "Add the transport field required by the agent configuration.",
    "title": "MCP server has no transport",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code MCP",
    ],
    "fix": {
      "description": "Add the transport field required by the agent configuration.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.mcpServerNoTransport",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.mcpServerNoTransport",
      "suggestion": "healthChecks.text.suggestions.mcpServerNoTransport",
      "title": "healthChecks.text.titles.mcpServerNoTransport",
    },
    "message": "noTransport has no command, url, type, or transport field.",
    "params": {
      "name": "noTransport",
    },
    "severity": "warning",
    "suggestion": "Add the transport field required by the agent configuration.",
    "title": "MCP server has no transport",
  },
  {
    "agentId": "claude-code",
    "category": "structure",
    "evidence": [
      "Claude Code skills",
    ],
    "fix": {
      "description": "Add SKILL.md or move non-skill files outside the skills directory.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.addSkillEntryPoint",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.skillMissingEntryPoint",
      "suggestion": "healthChecks.text.fixDescriptions.addSkillEntryPoint",
      "title": "healthChecks.text.titles.skillMissingEntryPoint",
    },
    "message": "broken-skill has no SKILL.md entrypoint.",
    "params": {
      "name": "broken-skill",
    },
    "severity": "warning",
    "suggestion": "Add SKILL.md or move non-skill files outside the skills directory.",
    "title": "Skill is missing SKILL.md",
  },
  {
    "agentId": "codex",
    "category": "structure",
    "evidence": [
      "Codex custom agents",
    ],
    "fix": {
      "description": "Codex custom agents require name, description, and developer_instructions.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.codexAgentIncomplete",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.codexAgentIncomplete",
      "suggestion": "healthChecks.text.suggestions.codexAgentIncomplete",
      "title": "healthChecks.text.titles.codexAgentIncomplete",
    },
    "message": "broken is missing name, description, or developer_instructions.",
    "params": {
      "name": "broken",
    },
    "severity": "warning",
    "suggestion": "Codex custom agents require name, description, and developer_instructions.",
    "title": "Codex custom agent metadata is incomplete",
  },
  {
    "agentId": "codex",
    "category": "structure",
    "evidence": [
      "Codex skills",
    ],
    "fix": {
      "description": "Add SKILL.md or move non-skill files outside the skills directory.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.addSkillEntryPoint",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": "healthChecks.text.messages.skillMissingEntryPoint",
      "suggestion": "healthChecks.text.fixDescriptions.addSkillEntryPoint",
      "title": "healthChecks.text.titles.skillMissingEntryPoint",
    },
    "message": "codex-broken-skill has no SKILL.md entrypoint.",
    "params": {
      "name": "codex-broken-skill",
    },
    "severity": "warning",
    "suggestion": "Add SKILL.md or move non-skill files outside the skills directory.",
    "title": "Skill is missing SKILL.md",
  },
  {
    "agentId": "claude-code",
    "category": "syntax",
    "evidence": [
      "Claude Code hooks",
    ],
    "fix": {
      "description": "Fix the JSON syntax in .claude/settings.json.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.suggestions.fixClaudeProjectSettings",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": undefined,
      "suggestion": "healthChecks.text.suggestions.fixClaudeProjectSettings",
      "title": "healthChecks.text.titles.invalidClaudeProjectSettings",
    },
    "message": "<unkeyed>",
    "params": undefined,
    "severity": "error",
    "suggestion": "Fix the JSON syntax in .claude/settings.json.",
    "title": "Invalid project settings.json",
  },
  {
    "agentId": "codex",
    "category": "syntax",
    "evidence": [
      "Codex config reference",
    ],
    "fix": {
      "description": "Fix the TOML syntax in Codex config.toml.",
      "label": "Suggested fix",
    },
    "i18nKeys": {
      "fixDescription": "healthChecks.text.fixDescriptions.fixCodexToml",
      "fixLabel": "healthChecks.text.fixLabels.suggestedFix",
      "message": undefined,
      "suggestion": "healthChecks.text.fixDescriptions.fixCodexToml",
      "title": "healthChecks.text.titles.invalidCodexConfig",
    },
    "message": "<unkeyed>",
    "params": undefined,
    "severity": "error",
    "suggestion": "Fix the TOML syntax in Codex config.toml.",
    "title": "Invalid Codex config.toml",
  },
]
`;
